--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Llama Stack Configuration
-LLAMA_STACK_BASE_URL=https://llama-stack-lls-demo.apps.XXX
-LLAMA_STACK_OPENAI_ENDPOINT=https://llama-stack-lls-demo.apps.XXX/v1/openai/v1
-INFERENCE_MODEL=maas/Llama-4-Scout-17B-16E-W4A16
+LLAMA_STACK_BASE_URL=http://localhost:5001/
+LLAMA_STACK_OPENAI_ENDPOINT=http://localhost:5001/v1
+INFERENCE_MODEL=ollama/llama3.2:3b
 API_KEY=fake
 
 # MCP Server Configuration
-MCP_WEATHER_SERVER_URL=http://mcp-weather-lls-demo.apps.XXX/sse
-MCP_OCP_SERVER_URL=https://ocp-mcp-lls-demo.apps.XXX/sse
+MCP_CUSTOMER_SERVER_URL=https://mcp-customer-route-nvinto-dev.apps.rm3.7wse.p1.openshiftapps.com/mcp
+MCP_FINANCE_SERVER_URL=https://mcp-finance-route-nvinto-dev.apps.rm3.7wse.p1.openshiftapps.com/mcp
